// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomwApp > should match snapshot - container 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h1
      data-testid="first-name-title"
    >
      Andres
    </h1>
    <h3>
      Nunez
    </h3>
    <p />
    <p
      class="mi-clase-favorita"
    >
      Hollow Knight, Silksong, RDR2, Bioshock
    </p>
    <h1>
      No activo
    </h1>
    <p
      style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px; margin-top: 30px;"
    >
      {"zipCode":"232323","country":"Mexico"}
    </p>
  </div>
</div>
`;

exports[`MyAwesomwApp > should match snapshot - screen 1`] = `
<div
  data-testid="div-app"
>
  <h1
    data-testid="first-name-title"
  >
    Andres
  </h1>
  <h3>
    Nunez
  </h3>
  <p />
  <p
    class="mi-clase-favorita"
  >
    Hollow Knight, Silksong, RDR2, Bioshock
  </p>
  <h1>
    No activo
  </h1>
  <p
    style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px; margin-top: 30px;"
  >
    {"zipCode":"232323","country":"Mexico"}
  </p>
</div>
`;
